# LibreSplit

./: README.md  meson.build
.github/workflows/: build.yml  check.yml
assets/: appimage.sh
docs/: auto-splitter-tips.md  auto-splitters.md  settings-keybinds.md
src/: main.c  therun.c  therun.h  timer.c  timer.h
src/gui/: actions.c  app_window.c  game.c  game.h  timer.c  timer.h
src/gui/component/: clock.c  components.c  components.h  detailed-timer.c  pb.c  prev-segment.c  splits.c
src/keybinds/: delayed_callbacks.h  delayed_handlers.c  keybinds_callbacks.c
src/lasr/: auto-splitter.c  auto-splitter.h  functions.h  utils.c  utils.h
src/lasr/functions/: readAddress.c  strtoida.c  strtoida.h
src/lasr/maps/: maps.c
src/settings/: utils.c
